Switch to enum singletons, static handlers